--- a/整理.md
+++ b/整理.md
@@ -38,8 +38,7 @@ link 标签会生成一个链接，它可能生成超链接，也可能生成外
 
 
 # css 
-[参考手册][Listen]
-[Listen]: http://css.doyoe.com/
+[参考手册]: http://css.doyoe.com/
 
 ## at 规则 (常用的)
 
@@ -51,7 +50,7 @@ link 标签会生成一个链接，它可能生成超链接，也可能生成外
 
 ```css
 @import "mystyle.css";
-	@import url("mystyle.css");
+@import url("mystyle.css");
 ```
 
 ### @media 
@@ -78,12 +77,13 @@ page 用于分页媒体访问网页时的表现设置，页面是一种特殊的
 
 ```css
 @page {
-  size: 8.5in 11in;
-  margin: 10%;
-  @top-left {
+    size: 8.5in 11in;
+    margin: 10%;
+  }
+@top-left {
     content: "Hamlet";
   }
-  @top-right {
+@top-right {
     content: "Page " counter(page);
   }
 }
